# axdevice

./: Cargo.toml  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
axdevice/: all.html  index.html  struct.AxVmDeviceConfig.html  struct.AxVmDevices.html
search.desc/axdevice/: axdevice-desc-0-.js
search.index/: 2eaab93fe1b2.js  53508178ac99.js  root.js
src/: config.rs  device.rs  device_cell.rs  lib.rs  lifecycle.rs  region.rs  registry.rs  timer.rs  wrapper.rs
src/axdevice/: config.rs.html  device.rs.html  lib.rs.html
src/notify/: manager.rs  mod.rs  notifier.rs  poll.rs  queue.rs  routing.rs
src/virtio/: blk.rs  blk_backend.rs  console.rs  console_backend.rs  mod.rs
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
