[package]
edition = "2024"
name = "axdevice"
version = "0.1.0"

[features]

[dependencies]
cfg-if = "1.0"
log = "0.4"
spin = "0.9"

# System independent crates provided by ArceOS.
axerrno = "0.1.0"
memory_addr = "0.4"

axaddrspace = "0.2"
axdevice_base = "0.1"
axvmconfig = {version = "0.1", default-features = false}
range-alloc-arceos = "0.1.4-pre.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
arm_vgic = {version = "0.1", features = ["vgicv3"]}
