[package]
name = "axdevice"
version = "0.1.0"
description = "A reusable, OS-agnostic device abstraction layer designed for virtual machines."
homepage = "https://github.com/arceos-hypervisor/axdevice"
repository = "https://github.com/arceos-hypervisor/axdevice"
keywords = ["hypervisor"]
license = "MIT OR Apache-2.0"
authors = ["aarkegz <aarkegz@gmail.com>"]
documentation = "https://docs.rs/axdevice"
categories = ["virtualization"]
edition = "2024"
readme = "README.md"

[features]

[dependencies]
log = "0.4"
cfg-if = "1.0"
spin = "0.10"

# System independent crates provided by ArceOS.
axerrno = "0.2"
memory_addr = "0.4"

axvmconfig = { version = "0.2.2", default-features = false }
axaddrspace = "0.3"
axdevice_base = "0.2.2"
range-alloc-arceos = { git = "https://github.com/arceos-hypervisor/range-alloc-arceos.git" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
arm_vgic = { version = "0.2.2", features = ["vgicv3"] }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv_vplic = "0.2.2"
